# Proiect-poo-book-store-managment-system

./: Autor.cpp  Autor.h  CMakeLists.txt  Carte.cpp  Carte.h  Client.cpp  Client.h  README.md  adresa.cpp  adresa.h  main.cpp
.github/workflows/: cmake.yml
files/exceptii/exceptii executabile/: AutorException.cpp  ComandaExceptions.cpp  DateInvalideException.cpp  PublicatieException.cpp
files/exceptii/exceptii_executabile/: ClientExceptions.cpp  DateInvalideException.cpp  LibrarieException.cpp  PaginareException.cpp  StocException.cpp
files/exceptii/exceptii_headere/: AutorException.h  ClientExceptions.h  ComandaExceptions.h  DataException.h  DateInvalideException.h  LibrarieException.h  PaginareException.h  PublicatieException.h  StocException.h
files/fisiere executabile/: AppState.cpp  AuthenticationService.cpp  Autor.cpp  AutorService.cpp  Book_Store_manager.cpp  Carte.cpp  CarteIndividuala.cpp  CarteStiintifica.cpp  Client.cpp  Comanda.cpp  CosService.cpp  InventoryService.cpp  Manual.cpp  PachetSerie.cpp  Publicatie.cpp  Reducere.cpp  Revista.cpp  RevistaIndividuala.cpp  SerchService.cpp  TradeInService.cpp  UnitateVanzare.cpp  adresa.cpp  publicatieService.cpp
files/fisiere_executabile/: AuthenticationService.cpp  Autor.cpp  AutorService.cpp  Book_Store_manager.cpp  Carte.cpp  CarteIndividuala.cpp  CarteStiintifica.cpp  Client.cpp  Comanda.cpp  CosService.cpp  InventoryService.cpp  Manual.cpp  PachetSerie.cpp  Publicatie.cpp  Reducere.cpp  ReviewService.cpp  UnitateVanzare.cpp  publicatieService.cpp
files/headere/: AppState.h  ArticolComanda.h  AuthenticationService.h  Autor.h  AutorService.h  Book_Store_manager.h  Carte.h  CarteIndividuala.h  CarteStiintifica.h  Client.h  ClientService.h  Comanda.h  ComandaService.h  CosService.h  InventoryService.h  Manual.h  PachetSerie.h  Publicatie.h  PublicatieService.h  PublicatieSugestie.h  Reducere.h  ReducereService.h  Review.h  ReviewService.h  Revista.h  RevistaIndividuala.h  SerchService.h  TradeInService.h  UnitateVanzare.h  adresa.h
